added event city and product selection

--- a/default/app.conf
+++ b/default/app.conf
@@ -11,5 +11,5 @@ label = splunkt
 
 [launcher]
 author = David Greenwood
-description = App to manage data for Splunkt iOS app
+description = Splunk App to manage data for Splunkt iOS App.
 version = 1.0
