--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -5,7 +5,7 @@
 [kvstore_event_lookup]
 external_type = kvstore
 collection = eventcollection
-fields_list = _key, addEventName, addEventId, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear
+fields_list = _key, addEventName, addEventId, addEventCity, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear
 
 [kvstore_shirtslogan_lookup]
 external_type = kvstore
@@ -26,3 +26,8 @@ fields_list = _key, addUseCase
 external_type = kvstore
 collection = competitioncollection
 fields_list = _key, addCompetition
+
+[kvstore_product_lookup]
+external_type = kvstore
+collection = productcollection
+fields_list = _key, addProduct
