removed show shirt function
now handled in app

--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -5,7 +5,7 @@
 [kvstore_event_lookup]
 external_type = kvstore
 collection = eventcollection
-fields_list = _key, addEventName, addEventId, addEventCity, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear, showShirt
+fields_list = _key, addEventName, addEventId, addEventCity, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear
 
 [kvstore_shirtslogan_lookup]
 external_type = kvstore
